--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
+<!--
+	Name: Yashkumar Upendrakumar Sompura
+	Student Number: 300967186
+	File Description: HTML file for ecommerce
+	File Version: 0.0.1 File and Project Created  
+ -->
 <!doctype html>
 <html>
 	<head>
 		<title>Web Technology Mobile Platforms | Assignment - 1</title>
+		
 	</head>
 	<body>
-		
+		Main Header Menu
+		<div class='rows'>
+			
+		</div>
 	</body>
 </html>
